fixes + filename in db + body only

--- a/NonSpring/.vscode/launch.json
+++ b/NonSpring/.vscode/launch.json
@@ -6,6 +6,20 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Launch Indexer",
+            "request": "launch",
+            "mainClass": "Indexer",
+            "projectName": "NonSpring_ec6afc72"
+        },
+        {
+            "type": "java",
+            "name": "Launch Application",
+            "request": "launch",
+            "mainClass": "Application",
+            "projectName": "NonSpring_ec6afc72"
+        },
+        {
+            "type": "java",
             "name": "Launch Application",
             "request": "launch",
             "mainClass": "Application",
