--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "porter-stemmer": "^0.9.1"
   }
 }
